fixs :  - contact page : user delete is now working. features :  - Overflow has been added for all list element. Those are hidden. Notice that the WebApp is destined to be deprecated. This part of the project should be redone from scratch.

--- a/app_web/public/stylesheets/user.css
+++ b/app_web/public/stylesheets/user.css
@@ -432,6 +432,7 @@ input:checked + .slider:before {
 /* --- Left Menu related style --- */
 .left-menu {
     background-color: #2F363E;
+    overflow-y: scroll;
 }
 
 .item-shortcuts, .button-shortcuts {
@@ -559,6 +560,7 @@ input:checked + .slider:before {
 
 .container-contact-table {
     width: 100%;
+    overflow-y: scroll;
 }
 
 .panel-contact-tools {
@@ -709,6 +711,7 @@ input:checked + .slider:before {
 
 .container-administration-table {
     /*background-color: #0a6ebd;*/
+    overflow-y: scroll;
 }
 
 .connection-state-gray {
@@ -787,4 +790,8 @@ input:checked + .slider:before {
 
 .downside-dock {
     overflow: auto;
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
